# spangap-lcd

./: INTERNALS.md  INTERNALS.old.md  LICENSE.md  README.md  straddle.yaml
docs/: apps-internals.md  apps.md  settings-internals.md  settings.md  shell-internals.md  shell.md  terminal-internals.md  terminal.md
esp-idf/: CMakeLists.txt  Kconfig  idf_component.yml  project_include.cmake
esp-idf/include/: lcd.h  lcd_app.h  lcd_board.h  lcd_input.h  lcd_input_box.h
esp-idf/scripts/: gen-micro-font.py  gen-spleen-font.py  gen-text-font.py  gen-tomthumb-font.py  lcd-fonts.py  lcd-icons.py
esp-idf/src/lcd_ui/: lcd.cpp  lcd_apps.cpp  lcd_fonts.cpp  lcd_fonts.h  lcd_icons.cpp  lcd_input_box.cpp  lcd_internal.h  lcd_launcher.cpp  lcd_lvgl.cpp  lcd_panel.cpp  lcd_settings.cpp  lcd_statusbar.cpp  lcd_term.cpp  lcd_term.h  lcd_textview.cpp  lv_font_micro_2x3.c  lv_font_montserrat_12_latin.c  lv_font_montserrat_16_latin.c  lv_font_spleen_5x8.c  lv_font_tomthumb_4x6.c  lv_mem_spangap.cpp  nanosvg_impl.c
esp-idf/src/lcd_ui/apps/: cli_app.cpp  log_app.cpp
esp-idf/src/lcd_ui/shell/: launcher.cpp  lcd_app.cpp  manager.cpp  nav.cpp  recents.cpp  shell_internal.h  statusbar.cpp  stylesheet.cpp  stylesheet.h  stylesheet_320x240.cpp
